Tilføjet til add-wish og lavet lidt refaktoreringer. Store html tilføjelser / inline-css til at få det til at være lidt pænt at kigge på.